# Rust-Neural-Network

./: Cargo.toml  README.md  weight_layers.txt  weights_by_id.txt
src/: activation_functions.rs  layer.rs  lib.rs  main.rs  neural_network.rs  neural_network_old.rs  optimizer.rs  src.rs  utils.rs
src/layers/: activation_functions.rs  linear.rs  mod.rs  relu.rs  sigmoid.rs
src/optimizers/: sgd.rs
