[package]
name = "rust_neural_network"
authors = ["Carson Burke <carsonburke22@gmail.com>"]
description = "Rust Neural Network"
license = "MIT"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
float-ord = "0.3.2"
ndarray = { version = "0.16.1", features = ["serde"] }

[features]
debug_network = []
